# -EnergyConsumption_predictionModel_Deployment

./: README.md  main.py  model_best.pkl  pyproject.toml
data/: data.csv
deployment/: app.py
research/: model.ipynb
src/: Data_ingestion.py  Data_preprocessing.py  model_building.py
