[project]
name = "energyconsumption-predictionmodel-deployment"
version = "1.0.0"
description = "Energy consumption prediction model"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.56.0",
    "xgboost>=3.2.0",
]
